--- a/app/views/credit_card/step2.html.erb
+++ b/app/views/credit_card/step2.html.erb
@@ -65,7 +65,7 @@
               <a href="" data-toggle="tooltip" data-placement="top" title="Your existing credit card bank name.">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
-            </label>
+            </label><br>
             <%= f.select(:bank_name, bank_name, class: "form-control") %>
           </div>
         </div>
