--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -251,7 +251,7 @@
               <div class="pb-product active">
                 <h1 class="product-name">Insurance</h1>
                 <div class="product-icon">
-                <p class="product-desc">Insurance plans with income friendly premiums & easy slaims settlement.</p>
+                <p class="product-desc">Insurance plans with income friendly premiums & easy claims settlement.</p>
                   <%= image_tag "icons/insurance-icon.svg", class: "insurance-icon" %>
                 </div>
               </div>
