--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
               <p>
                 <span class="sp-refer-earn">
                   <span>
-                    <%= link_to "Refer & Earn", "javascript:void(0)", "data-toggle": "modal", "data-target": "#refer-earn-modal", id: "show-refer-earn" %>
+                    <i class="fa fa-money"></i>&nbsp;
+                    <b><%= link_to "Refer & Earn", "javascript:void(0)", "data-toggle": "modal", "data-target": "#refer-earn-modal", id: "show-refer-earn" %></b>
                   </span>
                   <span class="bar"> | </span>
                 </span>
