--- a/app/views/home_loan/step1.html.erb
+++ b/app/views/home_loan/step1.html.erb
@@ -60,7 +60,9 @@
         <div class="row">
           <div class="col-md-4">
             <%= f.check_box(:terms_and_conditions) %>
-            <%= f.label "Terms & Conditions", for: 'home_loan_terms_and_conditions' %>
+            <label for='home_loan_terms_and_conditions' class='tnc_home_loan_lb'>
+              <i>I agree to the applicable <a href="/terms_and_conditions" target="_blank">T&Cs</a>.</i>
+            </label>
           </div>
         </div>
         <button type="submit" class="btn btn-custom">Process</button>
