--- a/app/views/transfer_personal_loan/_form.html.erb
+++ b/app/views/transfer_personal_loan/_form.html.erb
@@ -67,7 +67,9 @@
 <div class="row">
   <div class="col-md-4">
     <%= f.check_box(:terms_and_conditions) %>
-    <%= f.label "Terms & Conditions", for: 'personal_loan_terms_and_conditions' %>
+    <label for='transfer_personal_loan_terms_and_conditions' class='tnc_transfer_personal_loan_lb'>
+      <i>I agree to the applicable <a href="/terms_and_conditions" target="_blank">T&Cs</a>.</i>
+    </label>
   </div>
 </div>
 
