--- a/app/views/home/business_loan.html.erb
+++ b/app/views/home/business_loan.html.erb
@@ -155,6 +155,8 @@
       <p>GST plays an important role in getting business loans. The more the GST you pay, larger the business volume. Banks consider such applicants more reliable and their chances of loan being granted are better.</p>
       <p class="pl-ser"><strong>Is there an age limit to apply for Business Loan?</strong></p>
       <p>Yes, you can apply for loan only if you have completed 18 years of age or more at the time of business loan application.</p>
+      <p><strong>Will you help us get loans that Government offers to encourage start-ups and start business?</strong></p>
+      <p>Yes we do! In whichever category government offers loans, we help you secure the same and assist you through entire process of government loan.</p>
       <p class="pl-ser"><strong>Submission of any collateral to the bank required while applying for a business loan?</strong></p>
       <p>No, no need to submit any collateral to the bank or NBFC, for few specific secured business loans, collateral is required. We have discussed this issue in the beginning.</p>
       <p class="pl-ser"><strong>Are there pre closure and part-prepayment charges?</strong></p>
