--- a/app/views/home/channel_partner.html.erb
+++ b/app/views/home/channel_partner.html.erb
@@ -14,10 +14,13 @@
         <p>Have built your own set of loyal clientele that include individuals and small to mid-sized businesses</p>
         <p>You help your clients procure various kinds of loans, credit cards, and insurance</p>
         <p>We invite you to associate with us as Channel Partners to carry out your business operations in a more structured, trusted, and reliable manner. We offer our Channel Partners distinct, measurable benefits and conveniences that will fuel your growth manifold.</p>
+        <p class="pl-about">We’re a Structured, Open-minded Professionals</p>
         <p>By becoming our channel partners you associate with an experienced finance company that is ready to invest in your success. We offer you with fast and easy access to information that will help you sell and market the products better and help you earn trust of your clients faster.</p>
+        <p class="pl-about">We Will Support You in Your Growth Journey</p>
         <p>Our specialist team will help you to set up the partnership. After you become Groww Capital Channel Partner our in-house will be focused on your success and will offer all the help you require.</p>
+        <p>We will help you set up office and working model. Provide you with necessary software. We will give you code of over 60 banks. Support you to work across India. Provide you lead to convert business. Will always stand by you and support you in your growth.</p>
         <p class="pl-about">Transparent Professional Business Terms</p>
-        <p>Our partnership terms will be transparent, mutually beneficial and professional.  Our dedicated financing specialist will be available during all working days and within working hours (and beyond) to answer questions and help the business thrive.</p>
+        <p>Our partnership terms will be transparent, mutually beneficial and professional. Our dedicated financing specialist will be available during all working days and within working hours (and beyond) to answer questions and help the business thrive.</p>
         <p>Growing together is the surest and the best way to grow!</p>
         <p>To know more about how to become our channel partners and other information please call us on <a href="tel:+918806644344">+91-88066-44344</a>. You can also leave a message via email for us to revert at the earliest.</p>
       </div>
