--- a/app/views/home/credit_card.html.erb
+++ b/app/views/home/credit_card.html.erb
@@ -2,7 +2,7 @@
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center card-title">Planning to apply for a credit card but feeling confused with so much choice?</h3>
+        <h3 class="text-center card-title">Planning to apply for a credit card but feeling confused?</h3>
       </div>
     </div>
   </div>
@@ -60,6 +60,7 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p>Groww Capital presents credit cards to suit your lifestyle. We present options after understanding your basic needs for getting one. We deal in over 50 credit cards of the most reputed banks, including HDFC credit cards, IDFC best offers, American Express credit card among others. If you’re over 21 years we can get a credit card that best suits your requirements.</p>
       <p>Whether you need the credit card for international holidays, business travel, spouse or Child, or for online shopping that offers maximum reward point advantages, we have the best solutions!</p>
       <p class="pl-ser">Our personalized service comes at no extra cost!</p>
       <p>If you want to apply for a credit card, we assign an executive exclusive for you to provide all the front-end & back-end support you may need now and then. He’ll visit you to share info, collect and complete formalities and documentation process and later on he’ll  track you credit card delivery to ensure it is delivered on time.</p>
