--- a/app/views/home/gold_loan.html.erb
+++ b/app/views/home/gold_loan.html.erb
@@ -42,7 +42,7 @@
     </div>
     <div class="col-md-6">
       <h4 class="crd-heading">
-        <span>To procure gold loan you should approach a bank governed by the RBI.</span> This type of loan requires low paperwork. With KYC in place, some banks sanction gold loan as quickly as within 45 minutes. Fill the form and we will respond within 24 hours or less. If you’re in a hurry, and want to talk, call on <a href="tel:+918806644344">+91-88066-44344</a>
+        <span>To procure gold loan you should approach a bank governed by the RBI.</span> This type of loan requires low paperwork. With KYC in place, some banks sanction gold loan as quickly as within 45 minutes. We also offer overdraft limit against your gold. Fill the form and we will respond within 24 hours or less. If you’re in a hurry, and want to talk, call on <a href="tel:+918806644344">+91-88066-44344</a>
         <br><br>
         <p style="font-size: 18px; text-align: center;"><span>Pledge Gold | Get Loan | Repay Loan | Get Gold Back | Simple!</span></p>
       </h4>
