--- a/app/views/home/inssurance.html.erb
+++ b/app/views/home/inssurance.html.erb
@@ -43,7 +43,7 @@
     <div class="col-md-6">
       <h4 class="crd-heading">
         <br><br>
-        <span>Buy Term Plan, Car Insurance, or any other! we can help you choose the best one.</span> Instant Policy, Online Renewal, No Claim Bonus, & more.<br><br>Call <a href="tel:+918806644344">+91-88066-44344</a> to get all your answers.
+        <span>Buy Term Plan, Car Insurance, or any other! we can help you choose the best one.</span> Instant Policy, Online Renewal, We hand-hold you when it comes to settling the claims and getting maximum benefit from insurance company.<br><br>Call <a href="tel:+918806644344">+91-88066-44344</a> to get all your answers.
       </h4>
     </div>
   </div>
@@ -53,7 +53,8 @@
   <div class="row">
     <div class="col-md-12">
       <br>
-      <p>We Advise. We provide door to door support to get your Insurance Policy in order & offer support to settle the claim.</p>
+      <p>We hand-hold you when it comes to settling the claims and getting maximum benefit from insurance company.</p>
+      <p>We have so far settled claims amount to 11 crore for our clients.</p>
       <p>When you contact us to buy insurance, we make sure you leave happy and satisfied. Whichever insurance that you may have in mind, if this is the first time you’re buying insurance; our Relationship Manger will offer the help and answer all your questions. </p>
       <p>Whether you’re contemplating to take term insurance to protect your loved ones, or want to buy insurance for your vehicle or building or any other asset, we will present all the options based on your need and answer all the questions to help you take an informed decision to safeguard your future.</p>
       <p>With us you never have to worry about hidden charges or other unpleasant surprises leading to expense.</p>
@@ -65,8 +66,7 @@
       <p>Select the best plan</p>
       <p>Complete application and other formalities and documents</p>
       <p>Do payment and upload documents</p>
-      <p>Check out more services offered by  us</p>
-      <p class="pl-ser"><strong>Checkout our other services:</strong></p><br>
+      <p class="pl-ser"><strong>Check out more services offered by us</strong></p><br>
     </div>
   </div>
   <div class="row">
