--- a/app/views/home/loan_against_property.html.erb
+++ b/app/views/home/loan_against_property.html.erb
@@ -66,6 +66,10 @@
       <p class="pl-ser">How can you use Loan against Property (LAP)</p>
       <p>Anyone can apply for loan against property by pledging their residential or commercial property to meet their personal or business needs. You may apply for this loan and use the money to buy new property, funds to expand your business or build infrastructure, debt consolidation to lower cash outflows, holiday, marriage, education etc.  You can avail up to 60% to 70% of the value of property as loan against property.</p>
       <p>Before taking your case to the bank we’ll assess and improve the chances of your getting the loan by evaluating your financial position and value of property.</p>
+      <p>At the outset, we’d like all potential borrowers to take note of the fact that sanction of loan against property is not solely dependent on the value of property you own or are willing to mortgage. You have to understand that banks do verify your repayment capacity based on your income and not just value your property. Based on their evaluation loan is sanction to you. Our executive providing personalized service will explain it to you while advising you to apply for loan against property.</p>
+      <p>We help you get a sanction for loan against properties (by mortgaging apartment, residence, plot of land, factory, warehouses, etc.) with repayment tenure not exceeding 25 years.</p>
+      <p>Loan limits: 500,000 onwards.</p>
+      <p>Age limit to get loan against property is between 21 & 60 years</p>
       <p>We will ensure that properties you are planning to get loan against are free without any mortgage on them.</p>
       <p>If you have multiple properties that you can get loan against, we will help you decide the best and safest option. Besides residential and commercial properties some banks also grant loan against nursing homes with 30 beds, warehouse etc. this info also our Relationship Manger will share with you.</p>
       <p>We will also present list of banks that offer up to 90% of Loan against property as an overdraft.</p>
