--- a/app/views/home/new_car_loan.html.erb
+++ b/app/views/home/new_car_loan.html.erb
@@ -70,6 +70,8 @@
       <p>Different banks offer different benefits and offers on car loans depending on their offers and policies, your loan amount, and type of vehicle. Our Relationship Manager will apprise you of all the facts to help you take an informed decision and avail maximum benefits. Some banks also offer top up facility after you’ve cleared EMIs for first 9 or 10 months.</p>
       <p>After you finalize the car you want to buy, we’ll present bank options that offer best offers, quick processing, minimal documentation hassle, and speedy disbursal of funds. While suggesting banks for new car loan we always keep the foreclosure clause in mind. This ensures that if borrowers decide to clear the loans before time they do not have to pay foreclosure charges or pre-payment penalty, nor pay advance EMIs.</p>
       <p>Some banks offer attractive interest rates on loans to borrowers based on their credit scores. Also if you have taken home loan from the bank, and you have a good credit history, banks also offer concession on car loan interest rate. Our Relationship Managers are seasoned professionals who will give best and beneficial advice.</p>
+      <P>Minimum Auto Loan amount is INR 100,000 onwards</P>
+      <p>Repayment Tenure: 12 months to 72 months</p>
       <p class="pl-ser">Borrower-friendly Loan Repayment schemes:</p>
       <p>There are banks which offer borrower-friendly schemes. Under such schemes borrower starts the repayment of car loan in affordable EMIs and gradually increases the amount as his or her income grows and he is in a position to increase the amount and clear loan faster and save on interest.  Our Relationship Manager will apprise you of all these and more.</p>
       <p class="pl-ser">Car Loan Eligibility Calculator Criteria</p>
