--- a/app/views/home/transfer_home_loan.html.erb
+++ b/app/views/home/transfer_home_loan.html.erb
@@ -64,8 +64,12 @@
     <div class="col-md-12">
       <br>
       <p>Home Loan Transfer is the process of transferring home loan from existing bank to a new bank that offers the same at lower interest rates that what you’re already paying. You are eligible to transfer your home loan from your existing bank to another if you have regularly paid a minimum of 6-12 month EMI.</p>
+      <p>We help you get a home loan transferred with repayment tenure not exceeding 30 years.</p>
+      <p>Loan limits: 500,000 onwards.</p>
+      <p>Property Type: With home loan transfer you can buy a plot of land to build a house, you can use the home loan to buy ready apartment, apartment under construction, row houses, pre-owned residence, and independent house.</p>
+      <p>If your existing bank from which you secured loan didn’t help you with PM Awaas Yajana for any reason, we will help you get the benefit by completing required formalities at the time of home loan transfer to a new bank.</p>
       <p>We’re associated with leading reputed banks that offer transfer of home loan at starting interest rate of 6.75%. Different banks charge different Processing Fee and have different Approval Time. Get in touch with us to know more about it.</p>
-      <p class="pl-ser">Why do people opt for home loan bank transfer?</p>
+      <p class="pl-ser">Why do people opt for home loan transfer from one bank to another?</p>
       <p>People may opt for transfer of Home Loan from one bank to another for a wide range of reasons. While some want to avail of the benefit of attractive interest rate, some may want to reduce Equated Monthly Instalment (EMI). Almost all the banks that offer home loans also offer home loan transfer facility. However each one has their own policy with regard to processing fee and documentation etc.</p>
       <p class="pl-ser">Best Home Loan transfer Options For Maximum Savings</p>
       <p>When you reach out to us with your home loan transfer requirement we will provide all the services at your doorstep with help of a dedicated Relationship Manager. He or she will visit or call you to understand your requirements and present suitable options for home loan transfer, and compare them for you to choose the best one. You will also understand how change in the monthly instalment or even not changing the amount will bring you additional savings per month due to lower interest rates. How you can reduce your repayment period with new bank after home loan transfer to settle the loan in less time. If you wish we can also present options where you can stretch the home loan for as long as you want.</p>
