--- a/app/views/home/transfer_personal_loan.html.erb
+++ b/app/views/home/transfer_personal_loan.html.erb
@@ -2,7 +2,7 @@
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center card-title">Want to get Personal Bank Loan Transferred to another? We will help!</h2>
+        <h2 class="text-center card-title">We can help you to get Personal Bank Loan Transferred to another</h2>
       </div>
     </div>
   </div>
@@ -63,9 +63,9 @@
     <div class="col-md-12">
       <br>
       <p class="pl-ser"><strong>Personal Loan Transfer Eligibility</strong></p>
-      <p>If you have taken personal loan from one bank and want to transfer it to another, there are certain eligibility criteria the applicant has to meet, which depends on your repayment capacity to repay the loan along with your creditworthiness.  Other criteria are mentioned as under:</p>
+      <p>If you are over 21 and have taken personal loan from one bank and want to transfer it to another, there are certain eligibility criteria the applicant has to meet, which depends on your repayment capacity to repay the loan along with your creditworthiness.  Other criteria are mentioned as under:</p>
       <p>For example, the applicant must have a running personal loan from another bank.</p>
-      <p>Minimum outstanding loan amount has to be or exceed ₹ 50,000.</p>
+      <p>Minimum outstanding loan amount should be ₹ 50,000.</p>
       <p>The applicant’s previous bank account from which he took lean should reflect clean EMI payment track record of at least 12 months to be eligible for personal loan transfer.</p>
       <p>CIBIL Score required as per bank policy, typically 700 and above.</p>
       <p class="pl-ser"><strong>Why Do People Opt For Personal Loan Transfer</strong></p>
