--- a/app/views/home/used_car_loan.html.erb
+++ b/app/views/home/used_car_loan.html.erb
@@ -43,8 +43,8 @@
     </div>
     <div class="col-md-6">
       <h4 class="crd-heading">
-        <br><br>
-        <span>To get up to 100% finance for used cars, hassle-free processing of loan, minimal documentation and quick sanction</span>, fill out the form or talk to us on <a href="tel:+918806644344">+91-88066-44344</a>
+        <span>If you're looking to buy a second hand or used car and want a loan for it, you've come to the right place. We can help.</span>
+        To get up to 90% finance for used cars, hassle-free processing of loan, minimal documentation and quick sanction, fill out the form or talk to us on <a href="tel:+918806644344">+91-88066-44344</a>
         <br><br>
         | Paperless Sanction <br> | Speedy Disbursement <br> | Attractive Interest Rate & EMIs
       </h4>
@@ -71,6 +71,14 @@
       <p class="pl-ser">Used Car Loan Sanction Parameters</p>
       <p>If you wish to own a pre-used car and need a loan on it, you ought to know that different banks have different polices with regard to used car loans. Some banks sanction the loan on pre-owned cars that are up to 10 years old, and the borrower need to be at least 21 years of age. Generally banks offer loans to salaried as well as self-employed professionals and entrepreneurs as long as you meet all the conditions.</p>
       <p>Our Relationship Manager will present different bank options help you shortlist banks that meet your expectations. They will also assist you to use the <b>Pre-Owned Car Loan EMI calculator</b> to take an informed decision.</p>
+      <ul>
+        <li>We cannot get you Used Car Loan sanctions if the year of manufacture of the car is older than 2010.</li>
+        <li>Minimum Auto Loan amount is INR 100,000 onwards</li>
+        <li>Repayment Tenure: 12 months to 60 months</li>
+        <li>Documents Required</li>
+        <li>KYC income proof of borrower</li>
+        <li>RC Book of old car you're planning to buy</li>
+      </ul>
       <p class="pl-ser">How we help</p>
       <p>Our office is more than happy to help to choose a car that meets your specific needs and help you till the stage of title transfer for a hassle free experience of buying a pre-owned car. We help you find the right cars, with great reviews and different loan options available against each one of them. We also help you to choose a bank that offers maximum as well as flexible repayment conveniences including pocket-friendly EMIs. Call us to know more <a href="tel:+918806644344">+91-88066-44344</a></p>
       <p class="pl-ser"><strong>Checkout our other services:</strong></p><br>
