--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -5,9 +5,7 @@
     <div class="row align-items-end">
       <div class="col-md-12 about-us">
         <p class="pl-about">Who we are</p>
-        <p><a href="/">GrowwCapital</a> is a Nagpur based Financial Consultancy firm working hard to build a 
-          strong foundation &  network by offering unbiased advisory services to those seeking any type of Loans, Insurance Policies & Credit Cards. We offer client-centric, data-driven, and practical solutions.
-          Having been into this field for over 8 years, we’ve witnessed market growing, faltering, and getting back on its feet on several occasions. The experience has deepened our insight and we thus combine our experience of working with the best banks and financial institutions with passion for financial services to help clients meet their business and personal goals.</p>
+        <p><a href="/">GrowwCapital</a> is a Nagpur based Financial Consultancy firm on way to building a strong foundation & network by offering personalized service to those seeking any type of Loans, Insurance Policies & Credit Cards. We not only help clients in securing loan, we do it without charging them anything, we stand by them for any help till the last installment is paid. And for insurance clients, we stand by the family in case of any unfortunate event.</p>
         <p>Having been into this field for over 8 years, we’ve witnessed market growing, faltering, and getting back on its feet on several occasions. The experience has deepened our insight and we thus combine our experience of working with the best banks and financial institutions with passion for financial services to help clients meet their business and personal goals.</p>
         <p class="pl-about">Our clients</p>
         <p>Our clients profile is large and wide. From the First Time home loan and credit card seekers to those seeking to improve their credit score, transfer home loan from one bank to another; start-ups looking for the best health policy for entire family for optimum safety - we serve each of these with same commitment.</p>
@@ -18,9 +16,9 @@
         <p>In order to offer the best experience to clients doing business with us, we have set up a team comprising loan consultants, credit cards experts, and insurance policies.  Besides Front Office, and Sales Team we also have a CRM team that ensures clients are happy with our end-to-end services that includes going with the best product, proper documentation, and timely disbursement of loan and delivery of credit card and insurance policy.</p>
         <p>As of now <a href="/">GrowwCapital</a> does not have branches or offices in cities other than Nagpur.  As and when we set up new offices, we will inform our clients and associates via email.</p>
         <p class="pl-about">Mission</p>
-        <p>To make a wide range of financial products easily and responsibly accessible to clients, and deliver all products and services efficiently, leveraging technology.</p>
+        <p>To make a wide range of financial products easily and responsibly available to clients; to help all clients reaching out to us, get loans sanctioned. To stand by our insurance clients in their hour of need.</p>
         <p class="pl-about">Vision</p>
-        <p>The canvas of financial services and products is changing at a fast pace. Our vision is to help as many people as we can by offering best offers in products and services we deal in, in transparent & secure environment. We want to earn trust and loyalty of our clients with good services. We want to be a name to reckon with in all markets we operate and expand our area of operations.</p>
+        <p>The canvas of financial services and products is changing at a fast pace. Our vision is to help as many people as we can by offering best offers in products and services we deal in. We want to earn trust and loyalty of our clients with personalized services. We not only help clients secure loans, we also want to stand by them and continue to offer our services till last installment of loan is paid.</p>
         <p>We look forward to serving your smallest need!</p>
         <p class="abt-strip">
           <span>
