--- a/app/views/home/home_loan.html.erb
+++ b/app/views/home/home_loan.html.erb
@@ -2,7 +2,7 @@
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center card-title">Get Home Loan from Best Banks, Know about Home Loan Transfer Procedure, Eligibility, Documentation, and more</h2>
+        <h2 class="text-center card-title">Get Home Loan from Best Banks, Check Eligibility for Pradhanmantri Awaas Yojana, Documentation, and more</h2>
       </div>
     </div>
   </div>
@@ -64,8 +64,11 @@
     <div class="col-md-12">
       <br>
       <p class="pl-ser">The Best Bank for Your Home Loan</p>
-      <p>Before you start documentation process for a home loan we help you compare loans offered by different banks, and financial institutions offering loans to buy or build a home. Comparison includes the processing fee, interest rate, Loan-to-Value (LTV) ratio, and loan repayment duration offered by various banks.</p>
-      <p>We also use home loan EMI calculator to give you an idea about your EMI based on above factors. Get ready to compare home loans offered by various banks.  We keep our eyes open to special home loan offers offered by banks from time to time that we apprise you of when you reach out to us. What sets us apart is that through personalized service we understand your requirements before suggesting best banks to apply for home loans.</p>
+      <p>Before you start documentation process for a home loan we help you compare loans offered by different banks, and financial institutions offering loans to buy or build a home. Comparison includes the processing fee, interest rate, Loan-to-Value (LTV) ratio, and loan repayment duration offered by various banks. We also help you check your eligibility for Pradhan Mantri Awaas Yojana and if you are eligible for it, we help you to get the benefit.</p>
+      <p>We also use home loan EMI calculator to give you an idea about your EMI based on above factors. Get ready to compare home loans offered by various banks.  We keep our eyes open to special home loan offers offered by banks from time to time that we apprise you of when you reach out to us. What sets us apart is that through personalized service we understand your requirements before suggesting best banks to apply for home loans. Age limit for applying for home loan is between 21 and 60 years.</p>
+      <p>We help you get a sanction for home loan with repayment tenure not exceeding 30 years.</p>
+      <p>Loan limits: 500,000 onwards.</p>
+      <p>Property Type: With home loan you can buy a plot of land to build a house, you can use the home loan to buy ready apartment, apartment under construction, row houses, pre-owned residence, and independent house.</p>
       <p class="pl-ser">How long does it take for home loan to get sanctioned?</p>
       <p>Generally a home loan application takes around 3 to 4 weeks to get sanction followed by disbursement into your registered bank account. A borrowed however does need to keep a few factors in mind for a clear understanding. First thing is that you require a pre-approval of your home loan from the bank to get loan sanctioned. Having said that borrower also needs to keep in mind that pre-approval doesn't necessarily mean that the loan will be disbursed immediately. Disbursement of home loan depends on many external as well internal factors. The loan sanction may be delayed if you or your representative has delayed in submission of property or income-related documents, or any such document.</p>
       <p>At <a href="/">GrowwCapital</a>, timely processing and verification of documentation and completing all formalities is our top most responsibility and we conduct the entire process in the most professional manner to ensure delay is not caused due to our conduct or services.</p>
